# recycle

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AUTHORS  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yaml  release.yaml
datacycle/: config.py  main.py
datacycle/providers/: gcs.py  mongo.py  postgres.py
ops/: demo.hocon
recycle/: __init__.py  main.py  utils.py
recycle/providers/: gcs.py  mongo.py  postgres.py
scripts/: gen-gcs-CSEK.py
tests/: config.py  conftest.py  test_cli.py  test_conf.py  test_mongo.py  test_postgres.py  test_utils.py  utils.py
