[tool.poetry]
name = "recycle"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
Faker = "^8.1.2"
pymongo = "^3.11.3"
SQLAlchemy = "^1.4.13"
pg8000 = "^1.19.4"
tdqm = "^0.0.1"
typer = "^0.3.2"
furl = "^2.1.2"
dataconf = "^0.1.2"
sqlparse = "^0.4.1"
google-cloud-bigquery = {version = "^2.22.0", extras = ["bigquery"]}
joblib = "^1.0.1"
dnspython = "^2.1.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.1"
pytest = "^6.2.3"
black = "^21.4b2"
dictdiffer = "^0.8.1"
pre-commit = "^2.12.1"
pytest-cov = "^2.11.1"

[tool.poetry.scripts]
recycle = 'recycle.main:cli'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
